--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- navbar -->
-  <nav class="navbar navbar-expand-md navbar-light  pt-5 pb-4 ">
+  <nav class="navbar navbar-expand-md navbar-light bg-light pt-5 pb-4 ">
     <div class="container-xxl">
       <!-- navbar brand / title -->
       <a class="navbar-brand" href="#intro">
