--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Computer Technical</h5>
                             <p class="mb-2"><strong>Computer Client</strong> | <small>2017 - Current</small></p>
-                            <p>make a lil shortter
+                            <p>
                                 I run a side business specializing in computer maintenance and repair. I handle everything from hardware upgrades to software fixes, ensuring my clients' systems operate smoothly and efficiently.</p>
                         </div>
                     </div>
@@ -324,7 +324,7 @@
                         <i class="fa fa-user-circle service-icon bg-primary text-white mr-3" aria-hidden="true"></i>
                         <h4 class="font-weight-bold m-0">IT Support Specialist</h4>
                     </div>
-                    <p>ovides technical assistance and support for computer systems, software, and hardware issues, helping users troubleshoot and resolve problems.</p>
+                    <p>Povides technical assistance and support for computer systems, software, and hardware issues, helping users troubleshoot and resolve problems.</p>
                     <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
