--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                         <li class="btn btn-sm btn-outline-primary m-1 active"  data-filter="*">All</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Websites</li>
                         <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Software Engineering</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">miscellaneous</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Miscellaneous</li>
                     </ul>
                 </div>
             </div>
