--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h3 class="mb-4">My Education</h3>
+                    <h3 class="mb-4">Education</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -167,7 +167,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="mb-4">My Expericence</h3>
+                    <h3 class="mb-4">Expericence</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -455,7 +455,7 @@
                             <h4 class="font-weight-light mb-4">Kyle is a focused learner who does exceptionally well on projects in terms of completeness, timeliness, and attention to detail. His commitment and dependability are genuinely admirable.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">Dr. Dion Greenidge</h5>
-                            <span>Senior Lecturer</span>
+                            <span>Executive Director and CEO of The Cave Hill School of Business and Management</span>
                         </div>
                     </div>
                 </div>
