--- a/index.html
+++ b/index.html
@@ -380,28 +380,29 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <video class="img-fluid rounded w-100" controls autoplay>
-                            <source src="Video/SalonWebsite.mp4" type="video/mp4">
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/insert-picture-here.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/insert-picture-here.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
+                        <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="img-fluid rounded w-100"  src="https://www.youtube.com/embed/IqDI8m4cVLg" 
+                            title="YouTube video player" frameborder="2" allowfullscreen>
+                        </iframe>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative overflow-hidden mb-2">
-                        <img class="img-fluid rounded w-100" src="img/insert-picture-here.jpg" alt="">
-                        <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                            <a href="img/insert-picture-here.jpg" data-lightbox="portfolio">
-                                <i class="fa fa-plus text-white" style="font-size: 60px;"></i>
-                            </a>
-                        </div>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="img-fluid rounded w-100"  src="https://www.youtube.com/embed/SqgYMJuxy7U" 
+                                title="YouTube video player" frameborder="2" allowfullscreen>
+                            </iframe>
+                            </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe class="img-fluid rounded w-100"  src="https://www.youtube.com/embed/eZl9JuQlWc4" 
+                                title="YouTube video player" frameborder="2" allowfullscreen>
+                            </iframe>
+                            </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
