--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Lot 36 Harmony Lodge, St. Philip, Barbados</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
-                    <a href="" class="btn btn-outline-primary mr-4">Hire Me</a>
-                    <a href="" class="btn btn-outline-primary">Learn More</a>
+                    <buttom onclick="scrollToSection()" class="btn btn-outline-primary mr-4">Hire Me</buttom>
+                    <!-- <a href="" class="btn btn-outline-primary">Learn More</a> -->
                 </div>
             </div>
         </div>
@@ -311,7 +311,7 @@
                         <h4 class="font-weight-bold m-0">Web Design</h4>
                     </div>
                     <p>Focuses on creating the visual layout, look, and feel of a website, ensuring it is aesthetically pleasing and user-friendly.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -319,7 +319,7 @@
                         <h4 class="font-weight-bold m-0">Web Development</h4>
                     </div>
                     <p>Involves building and maintaining websites by coding, using programming languages to ensure functionality and performance.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -328,7 +328,7 @@
                         <h4 class="font-weight-bold m-0">Database Administrator</h4>
                     </div>
                     <p>Manages and oversees the database systems to ensure they run efficiently, securely, and can be accessed by authorized users.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -336,7 +336,7 @@
                         <h4 class="font-weight-bold m-0">IT Support Specialist</h4>
                     </div>
                     <p>Povides technical assistance and support for computer systems, software, and hardware issues, helping users troubleshoot and resolve problems.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -344,7 +344,7 @@
                         <h4 class="font-weight-bold m-0">Software Developer/Engineer</h4>
                     </div>
                     <p>writes, and tests code for applications and systems software, ensuring they meet user requirements and perform well.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -352,7 +352,7 @@
                         <h4 class="font-weight-bold m-0">UI/UX Designer</h4>
                     </div>
                     <p>Creates user interfaces and user experiences that are intuitive and enjoyable, focusing on both the functionality and the overall look and feel of the product.</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <!-- <a class="border-bottom border-primary text-decoration-none" href="">Read More</a> -->
                 </div>
             </div>
         </div>
