--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary d-flex align-items-center mb-5 py-5" id="home" style="min-height: 100vh;">
+    <div class="container-fluid bg-primary d-flex align-items-center mb-5 pb-4 pt-5" id="home" style="min-height: 100vh;">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
+            <div class="row align-items-center ">
+                <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0  pt-5">
                     <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
