--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <a href="#home" class="nav-item nav-link active">Home</a>
                 <a href="#about" class="nav-item nav-link">About</a>
                 <a href="#qualification" class="nav-item nav-link">Quality</a>
-                <a href="#skill" class="nav-item nav-link">Skill</a>
-                <a href="#service" class="nav-item nav-link">Service</a>
+                <a href="#skill" class="nav-item nav-link">Skills</a>
+                <a href="#service" class="nav-item nav-link">Services</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                <a href="#testimonial" class="nav-item nav-link">Review</a>
+                <a href="#testimonial" class="nav-item nav-link">Reviews</a>
                 <a href="#awards" class="nav-item nav-link">Awards                </a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
@@ -127,10 +127,10 @@
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Kyle Cox</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">14 July 2003</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">BSc Computer Science (Double)</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">4 Years</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Work Experience: <span class="text-secondary">4 Years</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">+1 (246) 251-3210</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary"><i class="bi bi-envelope"></i>Kyleacox11@gmail.com</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Lot 36 Harmony Lodge, St. Philip, Barbados</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Harmony Lodge, St. Philip, Barbados</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
                     <buttom onclick="scrollToSection()" class="btn btn-outline-primary mr-4">Hire Me</buttom>
@@ -578,10 +578,9 @@
     <div class="container-fluid bg-primary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="#"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://github.com/kyle5775/KylePrograms"><i class="fab fa-github"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/kyle.cox.3591267"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/kyle-cox-b9b99626b/"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="#">Privacy</a>
