--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
                     <buttom onclick="scrollToSection()" class="btn btn-outline-primary mr-4">Hire Me</buttom>
-                    <buttom onclick="window.location.href='https://www.linkedin.com/in/kyle-cox-b9b99626b/';" class="btn btn-outline-primary mr-4"><i class="fab fa-linkedin-in p-1"></i> </buttom>
+                    <buttom onclick="window.location.href='https://www.linkedin.com/in/kyle-cox-b9b99626b/';" class="btn btn-outline-primary mr-4">Linked<i class="fab fa-linkedin-in "></i> </buttom>
                 </div>
             </div>
         </div>
