--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Associate Degree in Computer Science</h5>
-                            <p class="mb-2"><strong>o Barbados Community College</strong> | <small>2020 - 2022</small></p>
+                            <p class="mb-2"><strong>Barbados Community College</strong> | <small>2020 - 2022</small></p>
                             <p>I pursued an education in computer science. During this period, I successfully attained an Associate Degree in Computer Science with an impressive GPA of 3.72, earning a distinction.
                                 </p>
                         </div>
@@ -591,11 +591,11 @@
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-light btn-social mr-2" href="https://github.com/kyle5775/KylePrograms"><i class="fab fa-github"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/kyle.cox.3591267"><i class="fab fa-facebook-f"></i></a>
+                <!-- <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/kyle.cox.3591267"><i class="fab fa-facebook-f"></i></a> -->
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/kyle-cox-b9b99626b/"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
-                <a class="text-white" href="#">Privacy</a>
+                <a class="text-white" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Privacy</a>
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Terms</a>
                 <span class="px-3">|</span>
