--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Kyle Anderson Cox</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Web Developer, 
-                        Database Administrator, Front End Developer, IT Support Specialist, Software Developer/Engineer</div>
+                    <div class="typed-text d-none">Web Developer, Database Administrator, Front End Developer, IT Support Specialist, Software Developer/Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="downloads/Kyle_Cox_CV.pdf" class="btn btn-outline-light mr-5" download>Download CV</a>
                     </div>
@@ -591,7 +590,7 @@
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
                 <a class="btn btn-light btn-social mr-2" href="https://github.com/kyle5775/KylePrograms"><i class="fab fa-github"></i></a>
-                <!-- <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/kyle.cox.3591267"><i class="fab fa-facebook-f"></i></a> -->
+                 <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/kyle.cox.3591267"><i class="fab fa-facebook-f"></i></a> 
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/kyle-cox-b9b99626b/"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
