--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#service" class="nav-item nav-link">Services</a>
                 <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-                <a href="#testimonial" class="nav-item nav-link">Review</a>
+                <a href="#testimonial" class="nav-item nav-link">Reviews</a>
                 <a href="#awards" class="nav-item nav-link">Awards                </a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
